# WF_LABEL_PRINTER

./: .gitignore  README.md  config.yaml  gui_main.py  main.py  pyproject.toml  requirements.txt
.claude/: gui_layout_expert.md  settings.local.json
.github/workflows/: build-windows.yml
.omc/: project-memory.json
.omc/sessions/: e4fc7a41-25ab-4f39-a6fa-6e6ea3634559.json
.omc/state/: agent-replay-f1282f06-b4ca-4602-bc7a-b9959882b97d.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
docs/: 01_system_architecture.md  02_prn_file_analysis.md  03_serial_number_structure.md  04_database_schema.md  05_api_design.md  06_implementation_plan.md  PyQt6_GUI_Checklist.md
prn/: M10_LABEL_ZPL.prn  PSA_LABEL_ZPL_with_mac_address_no_qr.prn
prns/: PSA_LABEL_ZPL_with_mac_address.prn
src/: __init__.py  main.py
src/database/: __init__.py  db_manager.py  exceptions.py  models.py
src/gui/: main_window.py
src/mcu/: __init__.py  mcu_controller.py  mcu_monitor.py
src/printer/: __init__.py  exceptions.py  print_controller.py  printer_discovery.py  prn_parser.py  zebra_controller.py  zebra_win_controller.py
src/serial_comm/: __init__.py  mac_parser.py  mcu_monitor.py  serial_monitor.py
src/utils/: __init__.py  config_manager.py  logger.py  (+2 more)
templates/: PSA_LABEL_ZPL_with_mac_address.prn
tests/: quick_test.py  test_barcode_issue.py  test_database.py  test_gui_simple.py  test_hardware.py  test_mac_parser.py  test_print_copies.py  test_printer.py  test_prn_parser.py  test_serial_number.py  test_zebra_auto.py  test_zebra_lib.py
(+55 files in other folders)
