[project]
name = "wf-label-printer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyusb==1.2.1",
    "pywin32>=305",
    "pyserial==3.5",
    "PyQt6>=6.7.0",
    "python-dateutil==2.8.2",
    "pyyaml==6.0.1",
    "zebra>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-qt==4.2.0",
    "black==23.12.1",
]
